After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 661170 - gnome-settings-daemon crashed with SIGSEGV in wacom_set_property()
gnome-settings-daemon crashed with SIGSEGV in wacom_set_property()
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: plugins
3.2.x
Other Linux
: Normal critical
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-10-07 11:40 UTC by Pedro Villavicencio
Modified: 2011-10-07 12:12 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2



Description Pedro Villavicencio 2011-10-07 11:40:54 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/gnome-settings-daemon/+bug/865286

Package: gnome-settings-daemon 3.2.0-0ubuntu3

It seems to be a random crash.

".

Thread 5 (Thread 0x7fd003d47700 (LWP 25918))

  • #0 _IO_setb
    at genops.c line 404
  • #1 _IO_str_init_static_internal
    at strops.c line 50
  • #2 __GI___vasprintf_chk
  • #3 vasprintf
    at /usr/include/x86_64-linux-gnu/bits/stdio2.h line 199
  • #4 g_vasprintf
    at /build/buildd/glib2.0-2.30.0/./glib/gprintf.c line 314
  • #5 g_strdup_vprintf
    at /build/buildd/glib2.0-2.30.0/./glib/gstrfuncs.c line 253
  • #6 g_strdup_printf
    at /build/buildd/glib2.0-2.30.0/./glib/gstrfuncs.c line 279
  • #7 g_dbus_message_new_from_blob
    at /build/buildd/glib2.0-2.30.0/./gio/gdbusmessage.c line 1794
  • #8 _g_dbus_worker_do_read_cb
    at /build/buildd/glib2.0-2.30.0/./gio/gdbusprivate.c line 713
  • #9 g_simple_async_result_complete
    at /build/buildd/glib2.0-2.30.0/./gio/gsimpleasyncresult.c line 749
  • #10 complete_in_idle_cb
    at /build/buildd/glib2.0-2.30.0/./gio/gsimpleasyncresult.c line 761
  • #11 g_main_dispatch
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 2441
  • #12 g_main_context_dispatch
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 3011
  • #13 g_main_context_iterate
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 3089
  • #14 g_main_loop_run
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 3297
  • #15 gdbus_shared_thread_func
    at /build/buildd/glib2.0-2.30.0/./gio/gdbusprivate.c line 276
  • #16 g_thread_create_proxy
    at /build/buildd/glib2.0-2.30.0/./glib/gthread.c line 1962
  • #17 start_thread
    at pthread_create.c line 304
  • #18 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 112
  • #19 ??

Thread 2 (Thread 0x7fd002d45700 (LWP 25920))

  • #0 g_variant_type_string_scan
    at /build/buildd/glib2.0-2.30.0/./glib/gvarianttype.c line 535
  • #1 g_variant_type_peek_string
    at /build/buildd/glib2.0-2.30.0/./glib/gvarianttype.c line 723
  • #2 g_variant_type_info_get
    at /build/buildd/glib2.0-2.30.0/./glib/gvarianttypeinfo.c line 733
  • #3 g_variant_alloc
    at /build/buildd/glib2.0-2.30.0/./glib/gvariant-core.c line 476
  • #4 g_variant_new_from_children
    at /build/buildd/glib2.0-2.30.0/./glib/gvariant-core.c line 560
  • #5 g_variant_new_variant
    at /build/buildd/glib2.0-2.30.0/./glib/gvariant.c line 688
  • #6 g_variant_valist_new_leaf
    at /build/buildd/glib2.0-2.30.0/./glib/gvariant.c line 4025
  • #7 g_variant_valist_new
    at /build/buildd/glib2.0-2.30.0/./glib/gvariant.c line 4207
  • #8 g_variant_valist_new
    at /build/buildd/glib2.0-2.30.0/./glib/gvariant.c line 4259
  • #9 g_variant_new_va
    at /build/buildd/glib2.0-2.30.0/./glib/gvariant.c line 4414
  • #10 g_variant_builder_add
    at /build/buildd/glib2.0-2.30.0/./glib/gvariant.c line 4556
  • #11 g_dbus_message_to_blob
    at /build/buildd/glib2.0-2.30.0/./gio/gdbusmessage.c line 2319
  • #12 g_dbus_connection_send_message_unlocked
    at /build/buildd/glib2.0-2.30.0/./gio/gdbusconnection.c line 1425
  • #13 g_dbus_connection_send_message_with_reply_unlocked
    at /build/buildd/glib2.0-2.30.0/./gio/gdbusconnection.c line 1753
  • #14 g_dbus_connection_send_message_with_reply
    at /build/buildd/glib2.0-2.30.0/./gio/gdbusconnection.c line 1862
  • #15 g_dbus_connection_call_internal
    at /build/buildd/glib2.0-2.30.0/./gio/gdbusconnection.c line 5107
  • #16 g_dbus_connection_call
    at /build/buildd/glib2.0-2.30.0/./gio/gdbusconnection.c line 5358
  • #17 dconf_settings_backend_send
    at dconfsettingsbackend.c line 190
  • #18 dconf_settings_backend_subscribe_context_func
    at dconfsettingsbackend.c line 611
  • #19 g_main_dispatch
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 2441
  • #20 g_main_context_dispatch
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 3011
  • #21 g_main_context_iterate
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 3089
  • #22 g_main_loop_run
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 3297
  • #23 dconf_context_thread
    at dconfcontext.c line 11
  • #24 g_thread_create_proxy
    at /build/buildd/glib2.0-2.30.0/./glib/gthread.c line 1962
  • #25 start_thread
    at pthread_create.c line 304
  • #26 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 112
  • #27 ??

Thread 1 (Thread 0x7fd00d8c8940 (LWP 25917))

  • #0 wacom_set_property
    at gsd-wacom-manager.c line 244
  • #1 set_touch
    at gsd-wacom-manager.c line 403
  • #2 set_wacom_settings
    at gsd-wacom-manager.c line 442
  • #3 gsd_wacom_manager_idle_cb
    at gsd-wacom-manager.c line 521
  • #4 g_main_dispatch
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 2441
  • #5 g_main_context_dispatch
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 3011
  • #6 g_main_context_iterate
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 3089
  • #7 g_main_loop_run
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 3297
  • #8 gtk_main
    at /build/buildd/gtk+3.0-3.2.0/./gtk/gtkmain.c line 1367
  • #9 main
    at main.c line 466

Comment 1 Bastien Nocera 2011-10-07 12:12:16 UTC
There's probably other problems on this system if we cannot get a single XInput device listed... Fixed in gnome-3-2 and master.

commit 1123e8cba7620a3b79f13ae5909c33f40d5312cc
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Oct 7 13:08:57 2011 +0100

    wacom: Fix possible crasher
    
    If XListInputDevices() fails, the number of devices could
    be positive, and cause a crash.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=661170