wacom: Fix possible crasher

If XListInputDevices() fails, the number of devices could
be positive, and cause a crash.

https://bugzilla.gnome.org/show_bug.cgi?id=661170